# file_to_cpp

./: CMakeLists.txt  CMakePresets.json  README.md  VS.props  vcpkg.json
cmake/: CMakeLists.txt  FileToCpp.cmake  HelloWorld.txt  Test.cpp
lib/: CMakeLists.txt  FileToCPP.cpp  FileToCPP.h  ReadFile.cpp  ReadFile.h
program/: CMakeLists.txt  FileToCPP.cpp
src/: CMakeLists.txt  FileToCPP.cpp
test/: CMakeLists.txt  HelloWorld.txt  Test.cpp
